<resources>
    <string name="app_name">FormularioContactos</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="Fecha_nacimiento">Fecha Nacimiento</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="descripcion_contacto">Descripción Contacto</string>
    <string name="descripcion">Descripción</string>
    <string name="texto_Boton_Siguiente">Siguiente</string>
    <string name="pnombre">nombre</string>
    <string name="ptelefono">telefono</string>
    <string name="pemail">email</string>
    <string name="pdescripcion">descripcion</string>
    <string name="pfechaNac">FechaNacimiento</string>
    <string name="fechaNacimiento">fechaNac</string>
    <string name="texto_Boton_Editar">Editar Datos</string>
    <string name="Confirmar_datos">Confirmar Datos</string>
</resources>