<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ylse_matinez.formulariocontactos.MainActivity">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tetNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_completo"
            />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

     <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showDatePickerDialog"
         android:layout_gravity="center_vertical"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/tetFechaNac"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/Fecha_nacimiento"
            android:onClick="showDatePickerDialog"
            />
    </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnCalendario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calendario"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.design.widget.TextInputEditText
            android:id="@+id/tetTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tetEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            />
        </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tetDescripcionContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion_contacto"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_Boton_Siguiente"
        android:theme="@style/MiBotonRaise"
        android:layout_marginTop="@dimen/boton_siguiente"
        />
</LinearLayout>
